snippets/Nemerle.Statechart/Tests/testsuite/negative/region_separator_not_allowed_in_region.n
using Nemerle;
using Nemerle.Collections;
using Nemerle.Text;
using Nemerle.Utility;

using System;
using Nemerle.Statechart;

using System.Collections.Generic;
using System.Linq;

  /// <summary>
  /// Description of junction_example.
  /// </summary>
  [statechart(
  <#
  flags testing auto_initial;

  //flags debug;

   name "region separator not allowed in 'region' syntax";
  
   region A
   {
     state B
     {
     }
   
     [---] // E: Parse Error: Region separator not allowed in \'region\' syntax
     
     state C
     {
     }
     
   } and
   {
     state D
     {
     }
     
     state F
     {
     }
   }
   
  #>)]
  public class example
  {
  }



